# ft_transcendence

./: .env.example  .etchosts  .gitignore  .mise.toml  README.md  auth.env.example  compose.yaml  justfile  package-lock.json  pong.env.example
backend/: .dockerignore  Dockerfile  Dockerfile.app  Dockerfile.worker  docker-entrypoint.sh  generate-ssl-certificate.sh  pyproject.toml  requirements.txt
backend/auth/authentication/: admin.py  manager.py  models.py  permissions.py  serializers.py  signals.py  urls.py  validators.py  views.py
backend/auth/authentication/management/commands/: consume.py
backend/auth/authentication/migrations/: 0001_initial.py  0002_rename_is_admin_user_is_staff_and_more.py  0003_remove_user_created_at_alter_user_is_active_and_more.py  0004_user_friends_alter_user_avatar_alter_user_nickname.py  0005_user_is_online.py  0006_alter_user_avatar.py
backend/auth/core/: settings.py  urls.py
backend/chat/core/: asgi.py  settings.py  urls.py
backend/chat/livechat/: consumer.py  manager.py  messageRecord.py  middleware.py  models.py  processors.py  publisher.py  queueHandler.py  routing.py  serializers.py  urls.py  views.py  websocketConsumers.py
backend/chat/livechat/management/commands/: consume.py
backend/pong/core/: asgi.py  settings.py  urls.py  wsgi.py
backend/pong/game/: consumer.py  middleware.py  models.py  pongConsumer.py  pongGame.py  processors.py  publisher.py  queueHandler.py  routing.py  serializers.py  tournament.py  tournamentConsumer.py  tournamentHandler.py  tournamentListener.py  tournament_factory.py  tournament_registry.py  urls.py  views.py  websocketListener.py
backend/pong/game/management/commands/: consume.py
conf/: Caddyfile
(+112 files in other folders)
