[tool.poetry]
package-mode = false
name = "ft-transcendence"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.1"
daphne = "^4.1.2"
djangorestframework = "^3.15.2"
twisted = {extras = ["http2", "tls"], version = "^24.7.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
